--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 12 16:07:52 CST 2020
-ndk.dir=D\:\\AndroidSDK\\ndk-bundle
-sdk.dir=D\:\\AndroidSDK
+#Mon Nov 23 18:01:17 CST 2020
+ndk.dir=/Users/landmyp/Library/Android/android-ndk-r21b
+sdk.dir=/Users/landmyp/Library/Android/sdk
