--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 23 18:01:17 CST 2020
-ndk.dir=/Users/landmyp/Library/Android/android-ndk-r21b
-sdk.dir=/Users/landmyp/Library/Android/sdk
+#Wed Nov 25 14:58:23 CST 2020
+sdk.dir=D\:\\AndroidSDK
